webcleaner (0.12) unstable; urgency=low

  * always initialize filter attributes in HttpServer.py
  * minor bugfixes with unintialized vars
  * require and use FOX and FXPy >= 0.99.167

 -- Bastian Kleineidam <calvin@debian.org>  Sat, 21 Apr 2001 13:34:05 +0200

webcleaner (0.11) unstable; urgency=low

  * new proxy code: HTTP/1.1 and select() I/O
  * use versioned PID file
  * new CVS module webcleaner2
  * parent proxy support for the new proxy code

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 18 Apr 2001 19:34:49 +0200

webcleaner (0.10) unstable; urgency=low

  * convert config values from unicode to strings
  * rename FilterRule to FolderRule (and all other occurences)

 -- Bastian Kleineidam <calvin@debian.org>  Tue, 10 Apr 2001 00:22:14 +0200

webcleaner (0.9) unstable; urgency=low

  * rename from WebCleaner to webcleaner
  * bumped standards to 3.5.2
  * remove INSTALL from .deb package
  * updated filtering rules
  * implemented filter config update
  * fixed parent proxy support
  * use fast expat XML parsing for configuration; this
    replaces PyXML
  * basic support for non-POSIX systems for daemon.py
  * use FOX registry for color values
  * burn all GIFs from webcleanerconf
  * webcleanerconf uses disablement icons in the filter tree list

 -- Bastian Kleineidam <calvin@debian.org>  Thu, 29 Mar 2001 00:00:19 +0200

webcleaner (0.8) unstable; urgency=low

  * Require PyXML >= 0.5.2 (compatibility functions again)
  * translation updates

 -- Bastian Kleineidam <calvin@users.sourceforge.net>  Sun, 14 Jan 2001 23:04:55 +0100

webcleaner (0.7) unstable; urgency=low

  * setup.py:
    - fix for distutils debugging function dump_dirs
    - hack for handling man pages correctly with bdist_rpm target
  * *.py:
    - require Python >= 2.0
    - require PyXML >= 0.6.2
  * webcleaner, webcleanerconf:
    - use compatibility functions in get_dom.py
    - i18n and german translation
  * webcleaner:
    - move proxy code to webfilter/proxy.py